# edge-typer

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: reproduce-matrix.yml  reproduce.yml  run.yml
config/: entrypoints.csv  entrypoints.txt  live_targets.yaml
scripts/: aggregate_replicas.py  aggregate_site_v2.py  aggregate_site_v3.py  aggregate_site_v4.py  aggregate_site_v5.py  build_live_availability.py  entrypoint.sh  entrypoints_from_traces.py  export_availability_json.py  export_graph_json.py  local_stage1_capture.sh  local_stage2_model.sh  local_stage3_live.sh  pipeline_analyze.sh  pipeline_capture.sh  pipeline_chaos.sh  pipeline_resilience.sh  run_demo_capture.sh  targets_to_entrypoints.py
src/edgetyper/: analyze_edges.py  capture_oteldemo.py  cli.py  ground_truth.yaml  live.py  resilience.py  targets.yaml
src/edgetyper/classify/: model.py  rules.py
src/edgetyper/features/: semconv.py  timing.py
src/edgetyper/graph/: build.py
src/edgetyper/io/: otlp_json.py
